# ray-tracing

./: .gitignore  CMakeLists.txt  camera.h  cow.h  hitable.h  hitable_list.cpp  hitable_list.h  main.cpp  material.h  math_constants.h  random_numbers.h  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
